Fix: GNB Visibility

--- a/src/components/MapHome/PopularSports/PopularSports.module.scss
+++ b/src/components/MapHome/PopularSports/PopularSports.module.scss
@@ -23,7 +23,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  z-index: 20; // 임시
+  z-index: 5; 
   overflow: visible;
 }
 
@@ -75,6 +75,7 @@
   box-shadow: 0px -4px 8px rgba(0, 0, 0, 0.1);
   overflow-y: auto;
   padding: 16px;
+  z-index: 20; 
 
   .localFilterTitle {
     @include T18B;
